--- a/.github/workflows/python3637package.yml
+++ b/.github/workflows/python3637package.yml
@@ -19,8 +19,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # python -m pip install --upgrade pip
+        # pip install -r requirements.txt
+        python -m pip install --upgrade poetry
+        poetry install -v
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -34,7 +36,8 @@ jobs:
         pytest
     - name: Build Python package
       run: |
-        pip install wheel twine; python setup.py sdist bdist_wheel
+        # pip install wheel twine; python setup.py sdist bdist_wheel
+        poetry build
     - name: Twine check
       run: |
         twine check dist/*
