--- a/.github/workflows/python3637package.yml
+++ b/.github/workflows/python3637package.yml
@@ -1,4 +1,4 @@
-name: Python3.6|3.7 package
+name: Python3.6|3.7|3.8 package
 
 on: [push]
 
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6, 3.7]
+        python-version: [3.6, 3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v1
@@ -18,26 +18,13 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install Poetry  # https://medium.com/@vanflymen/blazing-fast-ci-with-github-actions-poetry-black-and-pytest-9e74299dd4a5
-      uses: dschep/install-poetry-action@v1.2
-
-    - name: Cache Poetry virtualenv
-      uses: actions/cache@v1
-      id: cache
+    - name: Install Poetry  # https://github.com/marketplace/actions/python-poetry-action
+      uses: abatilo/actions-poetry@v1.5.0
       with:
-        path: ~/.virtualenvs
-        key: poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          poetry-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Set Poetry config
-        run: |
-          poetry config settings.virtualenvs.in-project false
-          poetry config settings.virtualenvs.path ~/.virtualenvs
-
-      - name: Install Dependencies
-        run: poetry install
-        if: steps.cache.outputs.cache-hit != 'true'
+        python_version: 3.8.0
+        poetry_version: 0.12.17
+        working_directory: ./working_dir # Optional, defaults to '.'
+        args: install
 
     - name: Lint with flake8
       run: |
