--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,13 @@ deepl-tr = "deepl_tr_async.__main__:main"
 # my-script = "xtl_read_assistant.log_revision:start"
 # hello = "xtl_read_assistant.read_assistant:hello"
 
+# [build-system]
+# requires = ["poetry>=0.12"]
+# build-backend = "poetry.masonry.api"
+
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["intreehooks"]
+build-backend = "intreehooks:loader"
+
+[tool.intreehooks]
 build-backend = "poetry.masonry.api"
