--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,8 @@ jobs:
       with:
         python_version: 3.8.0
         poetry_version: 0.12.17
+        # python_version: 3.6.7
+        # poetry_version: 1.0.5
         # working_directory: ./working_dir # Optional, defaults to '.'
         args: install
 
