--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: build
 
 on: [push]
 
@@ -21,10 +21,10 @@ jobs:
     - name: Install Poetry  # https://github.com/marketplace/actions/python-poetry-action
       uses: abatilo/actions-poetry@v1.5.0
       with:
-        python_version: 3.8.0
-        poetry_version: 0.12.17
-        # python_version: 3.6.7
-        # poetry_version: 1.0.5
+        # python_version: 3.8.0
+        # poetry_version: 0.12.17
+        python_version: 3.6.7
+        poetry_version: 1.0.5
         # working_directory: ./working_dir # Optional, defaults to '.'
         args: install
 
