--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,5 @@
+# poetry build
+# poetry publish -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }}
 name: build
 
 on: [push]
@@ -29,24 +31,29 @@ jobs:
         args: install
 
     - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        poetry run flake8 . --count --exit-zero --max-complexity=35 --ignore=E501,F401,E302,W292,F811,F841 --statistics
-    - name: Test with pytest,
-      run: poetry run pytest tests
+      uses: abatilo/actions-poetry@v1.5.0
+      with:
+        python_version: 3.6.7
+        poetry_version: 1.0.5
+        args: run python -m flake8 . --count --exit-zero --max-complexity=35 --ignore=E501,F401,E302,W292,F811,F841 --statistics
+
+    - name: Test with pytest
+      uses: abatilo/actions-poetry@v1.5.0
+      with:
+        python_version: 3.6.7
+        poetry_version: 1.0.5
+        args: run python -m pytest tests
+        
     - name: Build Python package
-      run: |
-        # pip install wheel twine; python setup.py sdist bdist_wheel
-        poetry build
-        poetry add twine
-    - name: Twine check
-      run: |
-        twine check dist/*
+      uses: abatilo/actions-poetry@v1.5.0
+      with:
+        python_version: 3.6.7
+        poetry_version: 1.0.5
+        args: build
+        
     - name: Publish to PyPI
-      env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USER }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: |
-        twine upload dist/* --skip-existing
+      uses: abatilo/actions-poetry@v1.5.0
+      with:
+        python_version: 3.6.7
+        poetry_version: 1.0.5
+        # args: publish -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }}
