--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ fuzzywuzzy = "^0.18.0"
 pyinstaller = "^3.6"
 tqdm = "^4.43.0"
 flake8 = "^3.7.9"
+pyicu = "^2.4.3"
+pycld2 = "^0.41"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -45,9 +47,9 @@ deepl-tr = "deepl_tr_async.__main__:main"
 # requires = ["poetry>=0.12"]
 # build-backend = "poetry.masonry.api"
 
+[tool.intreehooks]
+build-backend = "poetry.masonry.api"
 [build-system]
 requires = ["intreehooks"]
 build-backend = "intreehooks:loader"
 
-[tool.intreehooks]
-build-backend = "poetry.masonry.api"
