--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -13,7 +13,9 @@ jobs:
       uses: actions/setup-python@master
       with:
         python-version: ${{ matrix.python-version }}
-
+      - name: Install dependencies
+        run: |
+          apt install libicu-dev
     - name: Install Poetry
       uses: abatilo/actions-poetry@v1.5.0
       with:
