--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-
+        - name: Install dependencies
+          run: |
+            apt install libicu-dev
+          
     - name: Install Poetry  # https://github.com/marketplace/actions/python-poetry-action
       uses: abatilo/actions-poetry@v1.5.0
       with:
