--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-        - name: Install dependencies
-          run: |
-            apt install libicu-dev
-          
+    - name: Install dependencies
+      run: |
+        python3 -m pip install --upgrade pip
+        apt install libicu-dev
     - name: Install Poetry  # https://github.com/marketplace/actions/python-poetry-action
       uses: abatilo/actions-poetry@v1.5.0
       with:
@@ -46,14 +46,14 @@ jobs:
         python_version: 3.6.7
         poetry_version: 1.0.5
         args: run python -m pytest tests
-        
+
     - name: Build Python package
       uses: abatilo/actions-poetry@v1.5.0
       with:
         python_version: 3.6.7
         poetry_version: 1.0.5
         args: build
-        
+
     - name: Publish to PyPI
       uses: abatilo/actions-poetry@v1.5.0
       with:
