--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -13,9 +13,10 @@ jobs:
       uses: actions/setup-python@master
       with:
         python-version: ${{ matrix.python-version }}
-        - name: Install dependencies
-          run: |
-            apt install libicu-dev
+    - name: Install dependencies  # https://molecule.readthedocs.io/en/latest/testing.html
+      run: |
+        python3 -m pip install --upgrade pip
+        apt install libicu-dev
     - name: Install Poetry
       uses: abatilo/actions-poetry@v1.5.0
       with:
