--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        sudo python3 -m pip install --upgrade pip
+        # python3 -m pip install --upgrade pip
         sudo apt-cache install libicu-dev
     - name: Install Poetry  # https://github.com/marketplace/actions/python-poetry-action
       uses: abatilo/actions-poetry@v1.5.0
