--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        sudo apt-get install libicu-dev
         # python3 -m pip install --upgrade pip
-        sudo apt-cache install libicu-dev
     - name: Install Poetry  # https://github.com/marketplace/actions/python-poetry-action
       uses: abatilo/actions-poetry@v1.5.0
       with:
