--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
       run: |
         sudo apt-get install libicu-dev
         # python3 -m pip install --upgrade pip
+        python -m pip install --upgrade pip
+        python -m pip install poetry
+        poetry install
         poetry install
     - name: Lint with flake8
       run: |
