--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,7 @@ jobs:
         # python3 -m pip install --upgrade pip
         python -m pip install --upgrade pip
         python -m pip install poetry
-        poetry install
-        poetry install
+        poetry install -v
     - name: Lint with flake8
       run: |
         poetry run python -m flake8 . --count --exit-zero --max-complexity=35 --ignore=E501,F401,E302,W292,F811,F841 --statistics
@@ -47,4 +46,5 @@ jobs:
       env:
         POETRY_HTTP_BASIC_PYPI_USERNAME: ${{ secrets.PYPI_USER }}
         POETRY_HTTP_BASIC_PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: |
         poetry publish
