--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,7 @@ repository = "https://github.com/ffremt/deepl-tr-async"
 keywords = ["mt", "language", "learning"]
 classifiers = [
     "Environment :: Console",
-    "Framework :: MT",
     "Operating System :: OS Independent",
-    "Topic :: Software Development :: Machine Translation",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: Tools",
 ]
@@ -44,13 +42,13 @@ deepl-tr = "deepl_tr_async.__main__:main"
 # my-script = "xtl_read_assistant.log_revision:start"
 # hello = "xtl_read_assistant.read_assistant:hello"
 
-# [build-system]
-# requires = ["poetry>=0.12"]
-# build-backend = "poetry.masonry.api"
-
-[tool.intreehooks]
-build-backend = "poetry.masonry.api"
 [build-system]
-requires = ["intreehooks"]
-build-backend = "intreehooks:loader"
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
+
+# [tool.intreehooks]
+# build-backend = "poetry.masonry.api"
+# [build-system]
+# requires = ["intreehooks"]
+# build-backend = "intreehooks:loader"
 
