--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 # poetry build
 # poetry publish -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }}
-# export POETRY_PYPI_TOKEN_PYPI=my-token
+# export POETRY_PYPI_TOKEN=my-token
 # export POETRY_HTTP_BASIC_PYPI_USERNAME=username
 # export POETRY_HTTP_BASIC_PYPI_PASSWORD=password
 name: build
@@ -43,8 +43,8 @@ jobs:
 
     - name: Publish to PyPI
       env:
-        # POETRY_HTTP_BASIC_PYPI_USERNAME: ${{ secrets.PYPI_USER }}
-        # POETRY_HTTP_BASIC_PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKENV }}
+        POETRY_HTTP_BASIC_PYPI_USERNAME: ${{ secrets.PYPI_USER }}
+        POETRY_HTTP_BASIC_PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        # POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKENV }}
       run: |
         poetry publish
